tests/errors/surf_cls_04.ki
# reading a non-existent attribute on an instance is an error
class C:
    var _init_ = Function(self):
        self.x = 1
var c = C()
discard c.nope
